--- a/views/less/components/button.less
+++ b/views/less/components/button.less
@@ -6,7 +6,8 @@
     margin-top: 10rem;
   }
 
-  a {
+  a,
+  &-form {
     font-family: @main-font;
     font-size: 4rem;
     border: 1px solid @white;
