--- a/views/less/main.less
+++ b/views/less/main.less
@@ -2,12 +2,14 @@
 @import "views/general";
 @import "views/start";
 @import "views/reanactment";
+@import "views/hire-us";
 
 /* Components */
 @import "components/header";
 @import "components/footer";
 @import "components/menu";
 @import "components/button";
+@import "components/contact-form";
 
 /* Mixins */
 @import "mixins/border-radius";
