--- a/views/less/view-mixins/text-section.less
+++ b/views/less/view-mixins/text-section.less
@@ -1,6 +1,8 @@
 .text-section () {
   background-color: @main-dark;
-
+  display: flex;
+  align-items: center;
+  
   .content {
     @media (min-width: @screen-sm) {
       width: 80%;
