--- a/views/less/views/general.less
+++ b/views/less/views/general.less
@@ -50,7 +50,10 @@ h3 {
   text-transform: uppercase;
 }
 
-p{
+p, 
+label, 
+input, 
+textarea {
   color: @white;
   font-size: 1.8rem;
   line-height: 1.4;
