--- a/views/templates/views/reanactment.hbs
+++ b/views/templates/views/reanactment.hbs
@@ -15,6 +15,7 @@
 
     <section class="vikings-section">
       <div class="content">
+        <img src="../img/viking-icon.svg"/>
         <h3>Vikings</h3>
         <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
           Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
@@ -28,13 +29,14 @@
     
     <section class="image-slide-section">
       <div class="content">
-        <h3>Movies · Shows</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+        <h3>Vikings</h3>
+        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
       </div>
     </section>
 
     <section class="historical-section">
       <div class="content">
+        <img src="../img/viking-icon.svg"/>
         <h3>Historical</h3>
         <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
           Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
@@ -48,8 +50,8 @@
 
     <section class="fight-section">
       <div class="content">
-        <h2>Hire Us</h2>
-        <h3>Movies · Shows</h3>
+        <h2>Fighters</h2>
+        <h3>Sword · Axe · Spear</h3>
         <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
           Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
           turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
@@ -62,8 +64,8 @@
 
     <section class="craftmanship-section">
       <div class="content">
-        <h2>Hire Us</h2>
-        <h3>Movies · Shows</h3>
+        <h2>Craftsmen</h2>
+        <h3>Metal · Jewlery · Cloathing</h3>
         <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
           Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
           turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
@@ -76,11 +78,9 @@
 
     <section class="join-us-section">
       <div class="content">
-        <h3>Join us</h3>
-        <h2>Become a viking</h2>
-        {{> button 
-          text='Learn More' 
-          link="#" 
+        {{>contact-form
+          h2='Become a viking' 
+          h3="Join us"
         }}
       </div>
     </section>
