--- a/views/less/main.less
+++ b/views/less/main.less
@@ -10,6 +10,7 @@
 @import "components/menu";
 @import "components/button";
 @import "components/contact-form";
+@import "components/image-slider";
 
 /* Mixins */
 @import "mixins/border-radius";
