--- a/views/less/view-mixins/text-and-image-section.less
+++ b/views/less/view-mixins/text-and-image-section.less
@@ -1,4 +1,5 @@
 .text-and-image-section (@side, @image-url) {
+  min-height: 100vh;
   background: linear-gradient(to left, transparent, black), url(@image-url);
 
   @media (min-width: @screen-sm) {
