--- a/views/less/view-mixins/text-section.less
+++ b/views/less/view-mixins/text-section.less
@@ -1,8 +1,9 @@
 .text-section () {
+  min-height: 100vh;
   background-color: @main-dark;
   display: flex;
   align-items: center;
-  
+
   .content {
     @media (min-width: @screen-sm) {
       width: 80%;
