--- a/views/less/views/general.less
+++ b/views/less/views/general.less
@@ -66,3 +66,15 @@ a {
   color: @white;
   text-decoration: none;
 }
+
+.break-point {
+  display: block;
+
+  @media (min-width: @screen-sm) {
+    display: none;
+  } 
+}
+
+.no-wrap{
+  white-space: nowrap;
+}
