--- a/views/templates/components/contact-form.hbs
+++ b/views/templates/components/contact-form.hbs
@@ -1,14 +1,18 @@
-<div class="image-container"></div>
-<div class="form-container">
-  <h3>{{h3}}</h3>
-  <h2>{{h2}}</h2>
-  <form>
-    <label>Name</label>
-    <input type="text">
-    <label>Email</label>
-    <input type="text">
-    <label>Message</label>
-    <textarea rows="3"></textarea>
-    <input class="button-component-form" type="submit" value="Send">
-  </form>
+<div class="contact-form">
+  <div class="content">
+    <div class="image-container"></div>
+    <div class="form-container">
+      <h3>{{h3}}</h3>
+      <h2>{{h2}}</h2>
+      <form>
+        <label>Name</label>
+        <input type="text">
+        <label>Email</label>
+        <input type="text">
+        <label>Message</label>
+        <textarea rows="3"></textarea>
+        <input class="button-component-form" type="submit" value="Send">
+      </form>
+    </div>
+  </div>
 </div>
