--- a/views/templates/views/hire-us.hbs
+++ b/views/templates/views/hire-us.hbs
@@ -9,7 +9,7 @@
     <section class="top-section">
       <div class="content">
         <h1>Hire us</h1>
-        <h2>Movies · Shows · Events</h2>
+        <h2>Movies <span class="no-wrap">· Shows</span> <span class="no-wrap">· Events</span></h2>
       </div>
     </section>
 
@@ -28,10 +28,16 @@
     </section>
 
     <section class="image-slide-movie-section">
-      <div class="content">
-        <h3>Movies</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
-      </div>
+      {{>image-slider
+        images= '{
+        "images":[
+          { 
+            "url": "../img/profile.jpg", 
+            "heading":"Movies",
+            "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
+          }
+        ]}'
+      }}
     </section>
 
     <section class="hire-section">
@@ -49,19 +55,23 @@
     </section>
 
     <section class="image-slide-shows-section">
-      <div class="content">
-        <h3>Shows</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
-      </div>
+      {{>image-slider
+        images= '{
+        "images":[
+          { 
+            "url": "../img/fighting.jpg", 
+            "heading":"Shows",
+            "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
+          }
+        ]}'
+      }}
     </section>
 
     <section class="join-us-section">
-      <div class="content">
-        {{>contact-form
-          h2='Get in touch' 
-          h3="More info"
-        }}
-      </div>
+      {{>contact-form
+        h2='Get in touch' 
+        h3="More info"
+      }}
     </section>
     {{>footer}}
     <script src="/js/main.js"></script>
