--- a/views/templates/views/start.hbs
+++ b/views/templates/views/start.hbs
@@ -34,7 +34,7 @@
     <section class="hire-us-section">
       <div class="content">
         <h2>Hire Us</h2>
-        <h3>Movies · Shows</h3>
+        <h3>Movies <span class="no-wrap">· Shows</span></h3>
         <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
           Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
           turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
