Image slider script

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1113,13 +1113,18 @@ footer:after {
   height: 100%;
   background: linear-gradient(to bottom, transparent 50%, black);
 }
-.image-slider .images .image {
+.image-slider .images .sliding-element .image {
   height: 100%;
   width: 100%;
   position: absolute;
   z-index: -1;
+  left: 100%;
   background-size: cover;
   background-position: center center;
+  transition: left ease-out;
+}
+.image-slider .images .sliding-element:first-of-type .image {
+  left: 0;
 }
 .image-slider .slide-controllers {
   position: relative;
